--- a/package.json
+++ b/package.json
@@ -23,15 +23,22 @@
   },
   "homepage": "https://github.com/michaWorku/netflix-clone-server#readme",
   "dependencies": {
+    "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
     "colors": "^1.4.0",
+    "config": "^3.3.7",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "mongoose": "^6.2.7",
+    "pino": "^7.9.1",
+    "pino-pretty": "^7.5.4",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
