--- a/package.json
+++ b/package.json
@@ -24,25 +24,30 @@
   "homepage": "https://github.com/michaWorku/netflix-clone-server#readme",
   "dependencies": {
     "@types/config": "^0.0.41",
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
     "colors": "^1.4.0",
     "config": "^3.3.7",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
     "pino": "^7.9.1",
     "pino-pretty": "^7.5.4",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "concurrently": "^7.0.0",
     "nodemon": "^2.0.15"
